--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
   <meta property="og:site_name" content="Shaunak Pagnis' personal website" />
 
   <!-- Favicon/theme -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/img/manifest.json">
-  <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#24d05a">
-  <link rel="shortcut icon" href="/img/favicon.ico">
-  <meta name="msapplication-config" content="/img/browserconfig.xml">
-  <meta name="theme-color" content="#24252d">
+  <link rel="shortcut icon" href="favicon.png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
