typo fix and width increased

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li class="fun">
           <div class="left">i would like to</div>
           <div class="desc">
-            build good software that makes lives easier, adds value>
+            build good software that makes lives easier, adds value
           </div>
         </li>
         <li class="fun">
