changed the theme and added a few contents

--- a/index.html
+++ b/index.html
@@ -141,6 +141,22 @@
     </div>
   </div>
 
+  <div class="changelog">
+    <div class="title flash">CONTRIBUTING.md</div>
+    A few projects I work on
+    <div class="exp">
+      <div class="loading"> Coming Soon...</div>
+    </div>
+  </div>
+
+  <div class="changelog">
+    <div class="title flash">Timeline</div>
+    Some significant events
+    <div class="exp">
+      <div class="loading"> Coming Soon...</div>
+    </div>
+  </div>
+
   <div class="end">
     If you have questions or want to contact me, feel free to connect with me on any of the profiles listed on my site.
     <br><br>
