update headings and update current headline

--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,700" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
-  <!-- <script type='text/javascript' src='js/fetch.js'></script> -->
   <script type='text/javascript' src='scripts.js'></script>
 </head>
 <body>
   <div class="container">
   <h1>Shaunak Pagnis</h1>
-  <h2>Software Engineer in Pune, India</h2>
-  <div class="links">
-    <a href="https://github.com/shaunakpp">github</a>
-    <a href="https://twitter.com/_kanuahs">twitter</a>
-    <a href="https://www.linkedin.com/in/shaunak-pagnis-42440ba6/">linkedIn</a>
-    <a href="mailto:shaunak.pagnis@gmail.com">email</a>
-  </div>
+  <h2>Graduate Student at University of Maryland, Baltimore-County, MD</h2>
   <div class="intro">
-    Hi, I'm Shaunak, and I am a Senior Software Engineer at
-    <a href="http://amuratech.com">Amura</a> in Pune, India!
+    <a href="https://internships.github.com/interns/2019/shaunak">Intern</a> at <a href="https://github.com">GitHub Inc.</a> and previously a Team Lead - Product at <a href="https://amuratech.com">Amura, India</a>
+  </div>
+  <div class="links">
+    <a href="https://github.com/shaunakpp">GitHub</a>
+    <a href="https://twitter.com/_kanuahs">Twitter</a>
+    <a href="https://www.linkedin.com/in/shaunak-pagnis/">LinkedIn</a>
+    <a href="mailto:shaunak.pagnis@gmail.com">Email</a>
   </div>
   <div class="changelog">
-    <div class="title flash">#README</div>
+    <div class="title flash">README.md</div>
     A few things about me
     <div class="exp">
       <ul>
@@ -89,7 +87,7 @@
   </div>
 
   <div class="changelog">
-    <div class="title flash">Development</div>
+    <div class="title flash">/code</div>
       A few things I know
     <div class="exp">
       <ul>
@@ -150,7 +148,7 @@
   </div>
 
   <div class="changelog">
-    <div class="title flash">Timeline</div>
+    <div class="title flash">CHANGELOG.md</div>
     Some significant events
     <div class="exp">
       <div class="loading"> Coming Soon...</div>
@@ -164,4 +162,3 @@
   </div>
 </body>
 </html>
-
