--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
   <div class="bio">
     <div class="title flash">@speaker_bio</div>
-    I've spoken at <a href="http://rubyconfindia.org/2017/">RubyConfIndia 2017</a> and <a href="http://www.deccanrubyconf.org/">DeccanRubyConf 2017</a>. Here's my bio
+    I've spoken at <a href="https://2017.rubyconfindia.org">RubyConfIndia 2017</a> and <a href="https://2017.deccanrubyconf.org/">DeccanRubyConf 2017</a>. Here's my bio
     <div class="exp">
       Shaunak is a core team member of Amura's product division, Sell.Do, where he contributes to large scale Rails based products. Introduced to Ruby 4 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
     </div>
