add projects, modify markup for other sections

--- a/index.html
+++ b/index.html
@@ -1,164 +1,160 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Shaunak Pagnis</title>
-  <meta name="description" content="Shaunak Pagnis, Software Engineer in Pune, India." />
+  <head>
+    <title>Shaunak Pagnis</title>
+    <meta name="description" content="Shaunak Pagnis, Software Engineer in Pune, India." />
 
-  <!-- Twitter data -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Shaunak Pagnis">
-  <meta name="twitter:description" content="Shaunak Pagnis, Software Engineer in Pune, India.">
-  <meta name="twitter:creator" content="@_kanauhs">
+    <!-- Twitter data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Shaunak Pagnis">
+    <meta name="twitter:description" content="Shaunak Pagnis, Software Engineer in Pune, India.">
+    <meta name="twitter:creator" content="@_kanauhs">
 
-  <!-- Open Graph data -->
-  <meta property="og:title" content="Shaunak Pagnis" />
-  <meta property="og:url" content="http://shaunakpp.github.io/" />
-  <meta property="og:description" content="Shaunak Pagnis, Software Engineer in Pune, India." />
-  <meta property="og:site_name" content="Shaunak Pagnis' personal website" />
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Shaunak Pagnis" />
+    <meta property="og:url" content="http://shaunakpp.github.io/" />
+    <meta property="og:description" content="Shaunak Pagnis, Software Engineer in Pune, India." />
+    <meta property="og:site_name" content="Shaunak Pagnis' personal website" />
 
-  <!-- Favicon/theme -->
-  <link rel="shortcut icon" href="favicon.png">
+    <!-- Favicon/theme -->
+    <link rel="shortcut icon" href="favicon.png">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,700" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
-  <script type='text/javascript' src='scripts.js'></script>
-</head>
-<body>
-  <div class="container">
-  <h1>Shaunak Pagnis</h1>
-  <h2>Graduate Student at University of Maryland, Baltimore-County, MD</h2>
-  <div class="intro">
-    <a href="https://internships.github.com/interns/2019/shaunak">Intern</a> at <a href="https://github.com">GitHub Inc.</a> and previously a Team Lead - Product at <a href="https://amuratech.com">Amura, India</a>
-  </div>
-  <div class="links">
-    <a href="https://github.com/shaunakpp">GitHub</a>
-    <a href="https://twitter.com/_kanuahs">Twitter</a>
-    <a href="https://www.linkedin.com/in/shaunak-pagnis/">LinkedIn</a>
-    <a href="mailto:shaunak.pagnis@gmail.com">Email</a>
-  </div>
-  <div class="changelog">
-    <div class="title flash">README.md</div>
-    A few things about me
-    <div class="exp">
-      <ul>
-        <li class="fun">
-          <div class="left">i would like to</div>
-          <div class="desc">
-            build good software that makes lives easier, adds value
-          </div>
-        </li>
-        <li class="fun">
-          <div class="empty-left"></div>
-          <div class="desc">
-              work with great, like-minded people and learn from them
-          </div>
-        </li>
-        <li class="job">
-          <div class="left">I am</div>
-          <div class="desc">
-            A multi-tasker and a passionate programmer
-          </div>
-        </li>
-        <li class="job">
-          <div class="empty-left"></div>
-          <div class="desc">
-            A programming languages, databases and DevOps enthusiast
-          </div>
-        </li>
-        <li class="job">
-          <div class="empty-left"></div>
-          <div class="desc">
-            A quick and perpetual learner
-          </div>
-        </li>
-        <li class="job">
-          <div class="empty-left"></div>
-          <div class="desc">
-            An effective leader and a good mentor
-            <div class="info">
-              I have constantly mentored juniors at my job and have also hosted many local programming community meetups.
-            </div>
-          </div>
-        </li>
-      </ul>
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,700" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <script type='text/javascript' src='scripts.js'></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Shaunak Pagnis</h1>
+      <h2>Graduate Student at University of Maryland, Baltimore-County, MD.</h2>
+      <div class="intro">
+        <a href="https://internships.github.com/interns/2019/shaunak">Intern</a> at <a href="https://github.com">GitHub Inc.</a> and previously a Team Lead - Product at <a href="https://amuratech.com">Amura</a>.
+      </div>
+      <div class="links">
+        <a href="https://github.com/shaunakpp">GitHub</a>
+        <a href="https://twitter.com/_kanuahs">Twitter</a>
+        <a href="https://www.linkedin.com/in/shaunak-pagnis/">LinkedIn</a>
+        <a href="mailto:shaunak.pagnis@gmail.com">Email</a>
+      </div>
+      <div class="changelog">
+        <div class="title flash">README.md</div>
+        Some things that define me.
+        <div class="exp">
+          <ul>
+            <li class="fun">
+              <div class="left">I would like to</div>
+              <div class="desc">
+                <ul class="desc-points">
+                  <li>Build good software that makes lives easier, adds value.</li>
+                  <li>Work with like-minded people and learn from them.</li>
+                </ul>
+              </div>
+            </li>
+            <li class="job">
+              <div class="left">I am</div>
+              <div class="desc">
+                <ul class="desc-points">
+                  <li>A multi-tasker and a passionate programmer.</li>
+                  <li>A programming languages, databases and DevOps enthusiast.</li>
+                  <li>A quick and perpetual learner.</li>
+                  <li>An effective leader and a good mentor. I have constantly mentored juniors at my job and have also hosted many local programming community meetups.</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="changelog">
+        <div class="title flash">/code</div>
+        Technologies I have worked with.
+        <div class="exp">
+          <ul>
+            <li class="fun">
+              <div class="left">Languages</div>
+              <div class="desc">
+                Ruby, Javascript, Python, C
+              </div>
+            </li>
+            <li class="job">
+              <div class="left">Databases</div>
+              <div class="desc">
+                MongoDb, MySQL, PostGreSQL, Redis, ElasticSearch, DynamoDb
+              </div>
+            </li>
+            <li class="event">
+              <div class="left">Front-end</div>
+              <div class="desc">
+                jQuery, Backbone.js, Marionette.js, React
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="bio">
+        <div class="title flash">@speaker_bio</div>
+        I've spoken at <a href="https://2017.rubyconfindia.org">RubyConfIndia 2017</a> and <a href="https://2017.deccanrubyconf.org/">DeccanRubyConf 2017</a>. Here's my bio
+        <div class="exp">
+          Shaunak is a Computer science graduate Student at University of Maryland, Baltimore-County. He has 4+ years of experience in developing large scale Rails based products. Introduced to Ruby 8 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
+        </div>
+      </div>
+
+      <div class="changelog">
+        <div class="title flash">CONTRIBUTING.md</div>
+        A few projects I worked on
+        <div class="exp">
+          <ul>
+            <li class="event">
+              <div class="left"><a href="https://classroom.github.com">GitHub Classroom</a></div>
+              <div class="desc">
+                <p>
+                  <a href="https://education.github.com">GitHub Education's</a> teacher focused product for distributing programming assignments to students. I helped refactoring the assignment creation process and made performance improvements. More details on <a href="https://github.blog/2019-08-27-github-classroom-gets-a-reliability-and-performance-boost/">this blog post</a>.
+                </p>
+              </div>
+            </li>
+            <li class="job">
+              <div class="left"><a href="https://sell.do">Sell.do</a></div>
+              <div class="desc">
+                <p>
+                Flagship product of <a href="https://amuratech.com">Amura Marketing Technologies</a> where I was an early employee and contributed to the Marketing automation related features.
+                </p>
+              </div>
+            </li>
+            <li class="fun">
+              <div class="left"><a href="https://autovrsion.github.io">autovrsion</a></div>
+              <div class="desc">
+                <p>
+                  A prototype for an automated version control system for managing configuration files like database configs, cron jobs and server config files.
+                </p>
+              </div>
+            </li>
+            <li class="event">
+              <div class="left">Other projects</div>
+              <div class="desc">
+                <p>
+                  Apart from these, I have a few academic projects and a few experiments which you can view <a href="https://github.com/shaunakpp?utf8=%E2%9C%93&tab=repositories&q=&type=source&language="> here</a>.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="changelog">
+        <div class="title flash">CHANGELOG.md</div>
+        Some significant events
+        <div class="exp">
+          <div class="loading"> Coming Soon...</div>
+        </div>
+      </div>
+
+      <div class="end">
+        If you have questions or want to contact me, feel free to connect with me on any of the profiles listed on my site.
+        <br><br>
+      </div>
     </div>
-  </div>
-
-  <div class="changelog">
-    <div class="title flash">/code</div>
-      A few things I know
-    <div class="exp">
-      <ul>
-        <li class="event">
-          <div class="left">I expertise in</div>
-          <div class="desc">
-              The Ruby on Rails ecosystem
-          </div>
-        </li>
-        <li class="event">
-          <div class="empty-left"></div>
-          <div class="desc">
-              Object oriented and functional programming
-          </div>
-        </li>
-        <li class="event">
-          <div class="empty-left"></div>
-          <div class="desc">
-              Design patterns and server-side programming architectures
-          </div>
-        </li>
-        <li class="fun">
-          <div class="left">Languages</div>
-          <div class="desc">
-            Ruby, Javascript and Elixir
-          </div>
-        </li>
-        <li class="job">
-          <div class="left">Databases</div>
-          <div class="desc">
-            MongoDb, MySQL, PostGreSQL, Redis, ElasticSearch, DynamoDb
-          </div>
-        </li>
-        <li class="event">
-          <div class="left">Front-end</div>
-          <div class="desc">
-            jQuery, Backbone.js, Marionette.js, Angular4, React
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="bio">
-    <div class="title flash">@speaker_bio</div>
-    I've spoken at <a href="https://2017.rubyconfindia.org">RubyConfIndia 2017</a> and <a href="https://2017.deccanrubyconf.org/">DeccanRubyConf 2017</a>. Here's my bio
-    <div class="exp">
-      Shaunak is a core team member of Amura's product division, Sell.Do, where he contributes to large scale Rails based products. Introduced to Ruby 4 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
-    </div>
-  </div>
-
-  <div class="changelog">
-    <div class="title flash">CONTRIBUTING.md</div>
-    A few projects I work on
-    <div class="exp">
-      <div class="loading"> Coming Soon...</div>
-    </div>
-  </div>
-
-  <div class="changelog">
-    <div class="title flash">CHANGELOG.md</div>
-    Some significant events
-    <div class="exp">
-      <div class="loading"> Coming Soon...</div>
-    </div>
-  </div>
-
-  <div class="end">
-    If you have questions or want to contact me, feel free to connect with me on any of the profiles listed on my site.
-    <br><br>
-  </div>
-  </div>
-</body>
+  </body>
 </html>
