--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="mailto:shaunak.pagnis@gmail.com">Email</a>
       </div>
       <div class="changelog">
-        <div class="title flash">README.md</div>
+        <h2 class="title flash">README.md</h2>
         Some things that define me.
         <div class="exp">
           <ul>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="changelog">
-        <div class="title flash">/code</div>
+        <h2 class="title flash">/code</h2>
         Technologies I have worked with.
         <div class="exp">
           <ul>
@@ -95,7 +95,7 @@
       </div>
 
       <div class="bio">
-        <div class="title flash">@speaker_bio</div>
+        <h2 class="title flash">@speaker_bio</h2>
         I've spoken at <a href="https://2017.rubyconfindia.org">RubyConfIndia 2017</a> and <a href="https://2017.deccanrubyconf.org/">DeccanRubyConf 2017</a>. Here's my bio
         <div class="exp">
           Shaunak is a Computer science graduate Student at University of Maryland, Baltimore-County. He has 4+ years of experience in developing large scale Rails based products. Introduced to Ruby 8 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
@@ -103,7 +103,7 @@
       </div>
 
       <div class="changelog">
-        <div class="title flash">CONTRIBUTING.md</div>
+        <h2 class="title flash">CONTRIBUTING.md</h2>
         A few projects I worked on
         <div class="exp">
           <ul>
@@ -144,7 +144,7 @@
       </div>
 
       <div class="changelog">
-        <div class="title flash">CHANGELOG.md</div>
+        <h2 class="title flash">CHANGELOG.md</h2>
         Some significant events
         <div class="exp">
           <div class="loading"> Coming Soon...</div>
