--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <title>Shaunak Pagnis</title>
-    <meta name="description" content="Shaunak Pagnis, Software Engineer in Pune, India." />
+    <meta name="description" content="Shaunak Pagnis, Graduate Student at UMBC." />
 
     <!-- Twitter data -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Shaunak Pagnis">
-    <meta name="twitter:description" content="Shaunak Pagnis, Software Engineer in Pune, India.">
+    <meta name="twitter:description" content="Shaunak Pagnis, Graduate Student at UMBC.">
     <meta name="twitter:creator" content="@_kanauhs">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Shaunak Pagnis" />
     <meta property="og:url" content="http://shaunakpp.github.io/" />
-    <meta property="og:description" content="Shaunak Pagnis, Software Engineer in Pune, India." />
+    <meta property="og:description" content="Shaunak Pagnis, Graduate Student at UMBC." />
     <meta property="og:site_name" content="Shaunak Pagnis' personal website" />
 
     <!-- Favicon/theme -->
@@ -124,7 +124,7 @@
               </div>
             </li>
             <li class="fun">
-              <div class="left"><a href="https://autovrsion.github.io">autovrsion</a></div>
+              <div class="left"><a href="https://shaunakpp.github.io/autovrsion">autovrsion</a></div>
               <div class="desc">
                 <p>
                   A prototype for an automated version control system for managing configuration files like database configs, cron jobs and server config files.
