Updates current position, adds significant events, adds link icons, adds resume.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <title>Shaunak Pagnis</title>
-    <meta name="description" content="Shaunak Pagnis, Graduate Student at UMBC." />
+    <meta name="description" content="Shaunak Pagnis, software developer at Amazon.com." />
 
     <!-- Twitter data -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Shaunak Pagnis">
-    <meta name="twitter:description" content="Shaunak Pagnis, Graduate Student at UMBC.">
+    <meta name="twitter:description" content="Shaunak Pagnis, software developer at Amazon.com.">
     <meta name="twitter:creator" content="@_kanauhs">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Shaunak Pagnis" />
     <meta property="og:url" content="http://shaunakpp.github.io/" />
-    <meta property="og:description" content="Shaunak Pagnis, Graduate Student at UMBC." />
+    <meta property="og:description" content="Shaunak Pagnis, software developer at Amazon.com." />
     <meta property="og:site_name" content="Shaunak Pagnis' personal website" />
 
     <!-- Favicon/theme -->
@@ -22,22 +22,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,700" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <link href="styles.css" rel="stylesheet">
     <script type='text/javascript' src='scripts.js'></script>
   </head>
   <body>
     <div class="container">
       <h1>Shaunak Pagnis</h1>
-      <h2>Graduate Student at University of Maryland, Baltimore-County, MD.</h2>
+      <h2>Programmer, avid reader, pour-over coffee enthusiast and a trivia geek.</h2>
       <div class="intro">
-        <a href="https://internships.github.com/interns/2019/shaunak">Intern</a> at <a href="https://github.com">GitHub Inc.</a> and previously a Team Lead - Product at <a href="https://amuratech.com">Amura</a>.
+        SDE at <a href="https://www.amazon.jobs/en/business_categories/operations-technology">Amazon</a>. Previously, <a href="https://internships.github.com/interns/2019/shaunak">intern</a> at <a href="https://github.com">GitHub</a>, and a senior developer at <a href="https://amuratech.com">Amura</a>.
       </div>
-      <div class="links">
-        <a href="https://github.com/shaunakpp">GitHub</a>
-        <a href="https://twitter.com/_kanuahs">Twitter</a>
-        <a href="https://www.linkedin.com/in/shaunak-pagnis/">LinkedIn</a>
-        <a href="mailto:shaunak.pagnis@gmail.com">Email</a>
-      </div>
+
       <div class="changelog">
         <h2 class="title flash">README.md</h2>
         Some things that define me.
@@ -75,13 +71,13 @@
             <li class="fun">
               <div class="left">Languages</div>
               <div class="desc">
-                Ruby, Javascript, Python, C
+                Ruby, Java, Javascript, TypeScript, Python, C
               </div>
             </li>
             <li class="job">
               <div class="left">Databases</div>
               <div class="desc">
-                MongoDb, MySQL, PostGreSQL, Redis, ElasticSearch, DynamoDb
+                DynamoDb, MongoDb, MySQL, PostGreSQL, Redis, ElasticSearch
               </div>
             </li>
             <li class="event">
@@ -90,6 +86,11 @@
                 jQuery, Backbone.js, Marionette.js, React
               </div>
             </li>
+            <li class="fun">
+              <div class="left">DevOps</div>
+              <div class="desc">
+                Docker, New Relic, Heroku, AWS Lambda, ECS, EC2, SNS, SQS
+              </div>
           </ul>
         </div>
       </div>
@@ -98,7 +99,7 @@
         <h2 class="title flash">@speaker_bio</h2>
         I've spoken at <a href="https://2017.rubyconfindia.org">RubyConfIndia 2017</a> and <a href="https://2017.deccanrubyconf.org/">DeccanRubyConf 2017</a>. Here's my bio
         <div class="exp">
-          Shaunak is a Computer science graduate Student at University of Maryland, Baltimore-County. He has 4+ years of experience in developing large scale Rails based products. Introduced to Ruby 8 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
+          Shaunak is a Software Developer at Amazon.com  with a Master's degree in Computer Science from University of Maryland, Baltimore-County. He has 5+ years of experience in developing large scale software. Introduced to Ruby 8 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
         </div>
       </div>
 
@@ -107,7 +108,7 @@
         A few projects I worked on
         <div class="exp">
           <ul>
-            <li class="event">
+            <li class="fun">
               <div class="left"><a href="https://classroom.github.com">GitHub Classroom</a></div>
               <div class="desc">
                 <p>
@@ -119,11 +120,11 @@
               <div class="left"><a href="https://sell.do">Sell.do</a></div>
               <div class="desc">
                 <p>
-                Flagship product of <a href="https://amuratech.com">Amura Marketing Technologies</a> where I was an early employee and contributed to the Marketing automation related features.
+                  Flagship product of <a href="https://amuratech.com">Amura Marketing Technologies</a> where I was an early employee and contributed to the Marketing automation related features.
                 </p>
               </div>
             </li>
-            <li class="fun">
+            <li class="event">
               <div class="left"><a href="https://shaunakpp.github.io/autovrsion">autovrsion</a></div>
               <div class="desc">
                 <p>
@@ -131,7 +132,7 @@
                 </p>
               </div>
             </li>
-            <li class="event">
+            <li class="fun">
               <div class="left">Other projects</div>
               <div class="desc">
                 <p>
@@ -147,14 +148,104 @@
         <h2 class="title flash">CHANGELOG.md</h2>
         Some significant events
         <div class="exp">
-          <div class="loading"> Coming Soon...</div>
+          <ul>
+            <li class="job">
+              <div class="left">June 2020</div>
+              <div class="desc">
+                <p>
+                    Started working as a Software Development Engineer for Amazon's <a href="https://www.amazon.jobs/en/business_categories/operations-technology">Sortation and Transportation Tech</a> team
+                </p>
+              </div>
+            </li>
+            <li class="event">
+              <div class="left">May 2020</div>
+              <div class="desc">
+                <p>
+                  Finished Grad school at the <a href="https://umbc.edu"> University of Maryland Baltimore-County</a> with a M.S in Computer Science
+                </p>
+              </div>
+            </li>
+            <li class="job">
+              <div class="left">June 2019</div>
+              <div class="desc">
+                <p>
+                  <a href="https://internships.github.com/interns/2019/shaunak">Interned</a> at <a href="https://github.com">GitHub</a>, famously coined as <a href="https://speakerdeck.com/tenderlove/the-view-is-clear-from-here?slide=13">"le git"</a> by <a href="https://twitter.com/tenderlove">@tenderlove</a>
+                </p>
+              </div>
+            </li>
+            <li class="event">
+              <div class="left">July 2018</div>
+              <div class="desc">
+                <p>
+                  Started Grad school at the <a href="https://umbc.edu"> University of Maryland Baltimore-County</a> to pursue M.S in Computer Science
+                </p>
+              </div>
+            </li>
+            <li class="job">
+              <div class="left">April 2018</div>
+              <div class="desc">
+                <p>
+                  Left AmuraTech after three years and eleven months of scaling Sell.do to reach newer heights
+                </p>
+              </div>
+            </li>
+            <li class="fun">
+              <div class="left">August 2017</div>
+              <div class="desc">
+                <p>
+                  Spoke at <a href="https://2017.deccanrubyconf.org/">DeccanRubyConf 2017</a> on how <a href="https://speakerdeck.com/shaunakpp/to-active-record-and-beyond"> to ActiveRecord and beyond</a>
+                </p>
+              </div>
+            </li>
+            <li class="fun">
+              <div class="left">January 2017</div>
+              <div class="desc">
+                <p>
+                  Spoke at <a href="https://2017.rubyconfindia.org">RubyConfIndia 2017</a> on <a href="https://speakerdeck.com/shaunakpp/lazy-lazy-lazy-all-the-things"> lazy, Lazy, lazy, all the things!</a>
+                </p>
+              </div>
+            </li>
+            <li class="fun">
+              <div class="left">April 2015</div>
+              <div class="desc">
+                <p>
+                  Published how to <a href="https://www.amuratech.com/blog/manage-your-code-better-using-git">manage your code better using git</a>
+                </p>
+              </div>
+            </li>
+
+            <li class="job">
+              <div class="left">June 2014</div>
+              <div class="desc">
+                <p>
+                  Joined <a href="https://amuratech.com">AmuraTech</a> as a Software Engineer in their product team - <a href="https://amuratech.com">Sell.do</a>
+                </p>
+              </div>
+            </li>
+            <li class="event">
+              <div class="left">May 2014</div>
+              <div class="desc">
+                <p>
+                  Graduated from University of Pune with a Bachelors's degree in Computer Engineering
+                </p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
 
       <div class="end">
-        If you have questions or want to contact me, feel free to connect with me on any of the profiles listed on my site.
-        <br><br>
+        <div class="links">
+          <a href="https://github.com/shaunakpp" aria-label="Link to Shaunak's GitHub account"><i data-feather="github"></i></a>
+          <a href="https://twitter.com/_kanuahs" aria-label="Link to Shaunak's Twitter account"><i data-feather="twitter"></i></a>
+          <a href="https://www.linkedin.com/in/shaunak-pagnis/" aria-label="Link to LinkedIn account"><i data-feather="linkedin"></i></a>
+          <a href="mailto:shaunak.pagnis@gmail.com" aria-label="Open's your default mail application to send an email to Shaunak"><i data-feather="mail"></i></a>
+          <a target="_blank" href="https://drive.google.com/file/d/1v5e1pc-L_vb047XastsZqTpgES0pQoeJ/view?usp=sharing" aria-label="Link to Shaunak's Resume on Google Docs"><i data-feather="file-text"></i></a>
+        </div>
       </div>
     </div>
   </body>
+  <script>
+   feather.replace()
+  </script>
 </html>
