Introduces Dark mode
- Auto selects mode based on user's OS preference
- Provides a button to toggle mode
- Fixes Solarized colors to handle accessibility color contrasts in dark mode
- Removes dead css code

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="shortcut icon" href="favicon.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Supported modes -->
+    <meta name="color-scheme" content="dark light">
 
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,700" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
@@ -36,7 +38,7 @@
 
       <div class="changelog">
         <h2 class="title flash">README.md</h2>
-        Some things that define me.
+        Some things that define me
         <div class="exp">
           <ul>
             <li class="fun">
@@ -65,7 +67,7 @@
 
       <div class="changelog">
         <h2 class="title flash">/code</h2>
-        Technologies I have worked with.
+        Technologies I have worked with
         <div class="exp">
           <ul>
             <li class="fun">
@@ -242,10 +244,13 @@
           <a href="mailto:shaunak.pagnis@gmail.com" aria-label="Open's your default mail application to send an email to Shaunak"><i data-feather="mail"></i></a>
           <a target="_blank" href="https://drive.google.com/file/d/1v5e1pc-L_vb047XastsZqTpgES0pQoeJ/view?usp=sharing" aria-label="Link to Shaunak's Resume on Google Docs"><i data-feather="file-text"></i></a>
         </div>
+        <div class="mode-selector">
+          Change mode to <a href="javascript:void(0)" class="toggle-mode">[Dark]</a>
+        </div>
       </div>
     </div>
   </body>
   <script>
-   feather.replace()
+    feather.replace()
   </script>
 </html>
