change dark/light mode text

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <a target="_blank" href="https://drive.google.com/file/d/1v5e1pc-L_vb047XastsZqTpgES0pQoeJ/view?usp=sharing" aria-label="Link to Shaunak's Resume on Google Docs"><i data-feather="file-text"></i></a>
         </div>
         <div class="mode-selector">
-          Change mode to <a href="javascript:void(0)" class="toggle-mode">[Dark]</a>
+          Change to <a href="javascript:void(0)" class="toggle-mode">[Dark Mode]</a>
         </div>
       </div>
     </div>
