--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <title>Shaunak Pagnis</title>
-    <meta name="description" content="Shaunak Pagnis, software developer at Amazon.com." />
+    <meta name="description" content="Shaunak Pagnis, software engineer at Google." />
 
     <!-- Twitter data -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Shaunak Pagnis">
-    <meta name="twitter:description" content="Shaunak Pagnis, software developer at Amazon.com.">
+    <meta name="twitter:description" content="Shaunak Pagnis, software engineer at Google.">
     <meta name="twitter:creator" content="@_kanauhs">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Shaunak Pagnis" />
     <meta property="og:url" content="http://shaunakpp.github.io/" />
-    <meta property="og:description" content="Shaunak Pagnis, software developer at Amazon.com." />
+    <meta property="og:description" content="Shaunak Pagnis, software engineer at Amazon.com." />
     <meta property="og:site_name" content="Shaunak Pagnis' personal website" />
 
     <!-- Favicon/theme -->
@@ -33,7 +33,7 @@
       <h1>Shaunak Pagnis</h1>
       <h2>Programmer, avid reader, pour-over coffee enthusiast and a trivia geek.</h2>
       <div class="intro">
-        SDE at <a href="https://www.amazon.jobs/en/business_categories/operations-technology">Amazon</a>. Previously, <a href="https://internships.github.com/interns/2019/shaunak">intern</a> at <a href="https://github.com">GitHub</a>, and a senior developer at <a href="https://amuratech.com">Amura</a>.
+        SWE at Google. Previously, SDE at <a href="https://www.amazon.jobs/en/business_categories/operations-technology">Amazon</a>, <a href="https://internships.github.com/interns/2019/shaunak">intern</a> at <a href="https://github.com">GitHub</a>, and a senior developer at <a href="https://amuratech.com">Amura</a>.
       </div>
 
       <div class="changelog">
@@ -101,7 +101,7 @@
         <h2 class="title flash">@speaker_bio</h2>
         I've spoken at <a href="https://2017.rubyconfindia.org">RubyConfIndia 2017</a> and <a href="https://2017.deccanrubyconf.org/">DeccanRubyConf 2017</a>. Here's my bio
         <div class="exp">
-          Shaunak is a Software Developer at Amazon.com  with a Master's degree in Computer Science from University of Maryland, Baltimore-County. He has 5+ years of experience in developing large scale software. Introduced to Ruby 8 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
+          Shaunak is a Software Engineer at Google with a Master's degree in Computer Science from University of Maryland, Baltimore-County. He has 6+ years of experience in developing large scale software. Introduced to Ruby 8 years ago, it has since been his go-to language. When not working, you'll probably find him listening to Metallica or exploring complex magic systems of Brandon Sanderson's Cosmere.
         </div>
       </div>
 
