change resume link

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <a href="https://twitter.com/_kanuahs" aria-label="Link to Shaunak's Twitter account"><i data-feather="twitter"></i></a>
           <a href="https://www.linkedin.com/in/shaunak-pagnis/" aria-label="Link to LinkedIn account"><i data-feather="linkedin"></i></a>
           <a href="mailto:shaunak.pagnis@gmail.com" aria-label="Open's your default mail application to send an email to Shaunak"><i data-feather="mail"></i></a>
-          <a target="_blank" href="https://drive.google.com/file/d/1v5e1pc-L_vb047XastsZqTpgES0pQoeJ/view?usp=sharing" aria-label="Link to Shaunak's Resume on Google Docs"><i data-feather="file-text"></i></a>
+          <a target="_blank" href="https://drive.google.com/file/d/1v5e1pc-L_vb047XastsZqTpgES0pQoeJ/view?usp=share_link" aria-label="Link to Shaunak's Resume on Google Docs"><i data-feather="file-text"></i></a>
         </div>
         <div class="mode-selector">
           Change to <a href="javascript:void(0)" class="toggle-mode">[Dark Mode]</a>
